@@ -1,14 +1,14 @@
 Package: msBP
 Type: Package
 Title: Multiscale Bernstein Polynomials for Densities
-Version: 1.2
-Date: 2016-09-19
+Version: 1.3
+Date: 2017-06-06
 Author: Antonio Canale
-Maintainer: Antonio Canale <antonio.canale@unito.it>
+Maintainer: Antonio Canale <canale@stat.unipd.it>
 Depends: DPpackage
 Description: Performs Bayesian nonparametric multiscale density estimation and multiscale testing of group differences with multiscale Bernstein polynomials (msBP) mixtures as in Canale and Dunson (2016).
 License: GPL-2
 NeedsCompilation: yes
-Packaged: 2016-09-19 14:32:51 UTC; tony
+Packaged: 2017-06-06 14:25:15 UTC; tony
 Repository: CRAN
-Date/Publication: 2016-09-20 01:04:31
+Date/Publication: 2017-06-07 17:32:05 UTC
