@@ -1,6 +1,6 @@
-f752bccd477d9bdcb090e08723402880 *ChangeLog
-99a74abc2d3e952459a4f0d6c54335ae *DESCRIPTION
-403f0dcd1c4b3762ca5ae007c403ac7e *NAMESPACE
+94a374e1fa8fec0e537db1ed139dee0c *ChangeLog
+f33b6c9f7f1218e8bbd47683e58cd172 *DESCRIPTION
+56a2d315224f4599320dcf85bb01388e *NAMESPACE
 9ee7967dc5200b1e1cd3c92986a2ece0 *R/generic.R
 26d7ddad74fd2fbb99673d86cfcc4422 *R/msBP.Gibbs.R
 154cabec92f72f5865e301d5e0f01374 *R/msBP.LPML.R
@@ -17,17 +17,18 @@ d1c9a2d2a963e5842475f03ee69680ad *R/msBP.rsample.R
 6b9340377fd51c4bd614c3a026a3d07f *R/msBP.tree.R
 9b6dd54f263f5fae2cbd82a4a5c512dc *R/tree2vec.R
 20cba8fa9143ac5fb441984c04391651 *R/vec2tree.R
+62e1b535ee0a5d0795b27cf66acc32a2 *inst/CITATION
 88a7b96e93a3a15379af14b3938fca83 *man/msBP-internal.Rd
-f95f77e8494ae9cf670fcf096bd09a33 *man/msBP-package.Rd
-9d1ac947f596c3d0db547a581437ae93 *man/msBP.Gibbs.Rd
-8018d18fe212436b96393bf82a647643 *man/msBP.compute.prob.Rd
-588a987aa009d06294ed595773ddb9b9 *man/msBP.density.Rd
-45ce640d7f4bfa947bb4528f55832c1c *man/msBP.nrvTrees.Rd
-68b870cc71dd7a4d2e391c1f4cdb934a *man/msBP.postCluster.Rd
-39ce85780e6621a39f68ddf68826e66d *man/msBP.rsample.Rd
-f07af0acc0e2a4d3525c30310f7616e2 *man/msBP.rtree.Rd
-a4e88ee987781049a898b655af71474b *man/msBP.test.Rd
-48b713dff675a8d5586213bd357942d0 *man/msBP.tree.Rd
+3cc2195c482f7a29d14b099d801f6518 *man/msBP-package.Rd
+d8566e360b29c07883f872101e28e045 *man/msBP.Gibbs.Rd
+be5de6091a807b61af1ec1fc4b28c03d *man/msBP.compute.prob.Rd
+8ef1446b4eef5d94c6445e44fef0bf9e *man/msBP.density.Rd
+27947c98776133f89df448b36f6a0347 *man/msBP.nrvTrees.Rd
+033c1c69d733b340292c276f9d037219 *man/msBP.postCluster.Rd
+481fc6a2aff79ea83e49b0c9201be89e *man/msBP.rsample.Rd
+51ea0b4e1e7449ca412543804ef4f56c *man/msBP.rtree.Rd
+52e072a9a87c3097f82cee6ce61b47c5 *man/msBP.test.Rd
+46e6449bf711d70b0346d0cd6e2f2d8a *man/msBP.tree.Rd
 9a0aec344f7205da7c72309b95a0649e *man/tree2vec.Rd
 2a6f9e9e044a78154d3cfda5936d6f48 *src/Makevars
 6cf884377d317a0bdf577ff87d6cd769 *src/auxGibbs.cpp
@@ -38,5 +39,6 @@ a4e88ee987781049a898b655af71474b *man/msBP.test.Rd
 869f920fa54cb98b854d92e7c8808de7 *src/gibbs.h
 df4a6efc4c83b87a3de636211b65e4fc *src/msBP.cpp
 bbf7d1aa5c48badf1288f1defeaf61e3 *src/msBP.h
+36cacf6b6eab7845cfcec79c59a73dd3 *src/msBP_init.c
 cadfed4a5e4b991d10bbf59c42b8307d *src/wrapper.cpp
 f5a8d6c39630203cb26ab83ec6511184 *src/wrapper.h
