@@ -12,15 +12,17 @@ Performs Bayesian nonparametric multiscale density estimation and multiscale tes
 \tabular{ll}{
 Package: \tab msBP\cr
 Type: \tab Package\cr
-Version: \tab 0.3\cr
-Date: \tab 2016-04-19\cr
+Version: \tab 1.3\cr
+Date: \tab 2017-06-06\cr
 License: \tab GNU GPL\cr
 }
 }
 \author{
-Antonio Canale <antonio.canale@unito.it>
+Antonio Canale <canale@stat.unipd.it>
 }
 \references{
-Canale, A. and Dunson, D. B. (2016), "Multiscale Bernstein polynomials for densities", Statistica Sinica, 26
+Canale, A. and Dunson, D. B. (2016), "Multiscale Bernstein polynomials for densities", Statistica Sinica, 26(3), 1175-1195.
+
+Canale, A. (2017), "msBP: An R Package to Perform Bayesian Nonparametric Inference Using Multiscale Bernstein Polynomials Mixtures". Journal of Statistical Software, 78(6), 1-19. 
 }
 \keyword{Binary trees, Density estimation, Multiscale stick-breaking, Multiscale testing}
