@@ -29,7 +29,9 @@ Vector of values in which the random density is evaluated. If used, \code{n.poin
 Vector of size \code{n.points} or \code{length(y)}
 }
 \references{
-Canale, A. and Dunson, D. B. (2016), "Multiscale Bernstein polynomials for densities", Statistica Sinica, 26
+Canale, A. and Dunson, D. B. (2016), "Multiscale Bernstein polynomials for densities", Statistica Sinica, 26(3), 1175-1195.
+
+Canale, A. (2017), "msBP: An R Package to Perform Bayesian Nonparametric Inference Using Multiscale Bernstein Polynomials Mixtures". Journal of Statistical Software, 78(6), 1-19. 
 }
 \seealso{
 \code{\link{msBP.rtree}}
